# kgames

./: .editorconfig  .gitignore  COPYING  Imakefile  Makefile  PatchLevel  contrib.letter  games.tmpl  kgames.directory.in  kgames.menu.in  meson.build  meson_options.txt  tarup  update-menus.sh
CVS/: Entries  Repository
Xkw/: .gitignore  Animate.c  Animate.h  Cards.c  Cards.h  CardsP.h  CardsUtil.c  CardsUtil.h  Dialog.c  Draw.c  Events.c  Hand.c  Hand.h  HandDrag.c  HandP.h  Icon.c  Imakefile  KCommand.c  KCommand.h  KCommandP.h  KLabel.c  KLabel.h  KLabelP.h  KMenuButton.c  KMenuButton.h  KMenuButtonP.h  KPorthole.c  KPorthole.h  KPortholeP.h  KScrollbar.c  KScrollbar.h  KScrollbarP.h  KSimple.c  KSimple.h  KSimpleMenu.c  KSimpleMenu.h  KSimpleMenuP.h  KSimpleP.h  KSme.c  KSme.h  (+42 more)
Xkw/CVS/: Entries  Repository
Xkw/cards/: README
Xkw/exports/CVS/: Repository
Xkw/exports/include/CVS/: Repository
Xkw/exports/include/X11/CVS/: Entries  Repository
Xkw/exports/include/X11/Xaw/CVS/: Repository
Xkw/exports/include/X11/Xkw/: Cards.h  CardsP.h  CardsUtil.h  Hand.h  HandP.h  Layout.h  LayoutP.h  Pad.h  PadP.h  SuitCards.h  Thermo.h  ThermoP.h
debian/: changelog  control  copyright  gbp.conf  kgames.lintian-overrides  rules  watch
dominos/: Dominos-color.ad  Dominos.ad  Dominos.c  Dominos.h  DominosP.h  Imakefile  Makefile  board.c  computer.c  connect.c  domino.c  dominos.c  dominos.h  file.c  find.c  game.c  kdominos.6  meson.build  util.c
dominos/CVS/: Entries  Repository  Root
exports/CVS/: Repository
exports/include/CVS/: Entries  Repository
exports/include/X11/CVS/: Repository
exports/include/X11/Xaw/: Cards.h  CardsP.h  CardsUtil.h  Hand.h  HandP.h  Layout.h  LayoutP.h  PadP.h  SuitCards.h  ThermoP.h
exports/include/X11/Xaw/CVS/: Repository
exports/include/X11/Xkw/: Pad.h  Thermo.h
kaces/: Imakefile  KAces-color.ad  KAces.ad  KAces.ad.in  Makefile  aces.c  kaces.6  kaces.desktop.in  meson.build
kaces/CVS/: Entries  Repository
kcanfield/: Imakefile  KCanfield.ad  KCanfield.ad.in  Makefile  canfield.c  kcanfield.6  kcanfield.desktop.in  meson.build
kcanfield/CVS/: Entries  Repository
kcribbage/: CribBoard.c  CribBoard.h  CribBoardP.h  Cribbage.ad  Imakefile  Makefile  Makefile.curses  cards.c  crib.c  cribbage.h  curses.c  extern.c  io.c  kcribbage.1x.html  kcribbage.6  kcribbage.desktop.in  meson.build  score.c  support.c  test.c  xt.c
kcribbage/CVS/: Baserev  Entries  Repository
kdominos/: Dominos.ad.in  DominosP.h  domino.c  file.c  find.c  kdominos-icon.5c  kdominos.desktop.in  make-dominos-svg  meson.build  util.c
kklondike/: Imakefile  KKlondike.ad  KKlondike.ad.in  Makefile  kklondike.6  kklondike.desktop.in  klondike.c  meson.build
kklondike/CVS/: Entries  Repository
kmcarlo/: MonteCarlo.ad.in  kmcarlo.desktop.in  mc.c  meson.build
kmontana/: Imakefile  KMontana.ad  KMontana.ad.in  Makefile  kmontana.6  kmontana.desktop.in  meson.build  montana.c
kmontana/CVS/: Entries  Repository
kslyfox/: KSlyFox-hard.ad.in  KSlyFox.ad.in  kslyfox.desktop.in  meson.build  slyfox.c
kspider/: Imakefile  KSpider-color.ad  KSpider.ad  KSpider.ad.in  Makefile  kspider.6  kspider.desktop.in  meson.build  spider.c
kspider/CVS/: Entries  Repository
ktabby/: Imakefile  KTabby.ad  KTabby.ad.in  Makefile  ktabby.6  ktabby.desktop.in  meson.build  tabby.c
ktabby/CVS/: Entries  Repository
kthieves/: Imakefile  KThieves-color.ad  KThieves.ad  KThieves.ad.in  Makefile  kthieves.6  kthieves.desktop.in  meson.build  thieves.c
kthieves/CVS/: Baserev  Entries  Repository
ktowers/: Imakefile  KTowers.ad  KTowers.ad.in  Makefile  ktowers.6  ktowers.c  ktowers.desktop.in  meson.build
ktowers/CVS/: Entries  Repository
mc/: Imakefile  Makefile  MonteCarlo.ad  kmcarlo.6  mc.c  meson.build
mc/CVS/: Entries  Repository
netcards/: design
netcards/CVS/: Entries  Repository
reversi/: .gitignore  Imakefile  Kreversi.ad  Makefile  Reversi.ad  Reversi.c  Reversi.h  Xreversi.ad  corners.c  count.c  display.c  fini.c  game.c  genedge.c  hasmove.c  makeedge.y  meson.build  minmax.c  move.c  revers.h  reversi  reversi.h  transform.c  transform.h  user.y  xreversi.c
reversi/CVS/: Baserev  Entries  Repository
slyfox/: Imakefile  KSlyFox-color.ad  KSlyFox.ad  Makefile  kslyfox.6  meson.build  slyfox.c
slyfox/CVS/: Entries  Repository
tmp/CVS/: Repository
xmille/: Imakefile  Makefile  Mille.ad  Mille.ad.in  MilleCards.c  MilleCards.h  MilleCardsP.h  animate.c  card-names  comp.c  curses_ui.c  drawcard.c  end.c  extern.c  init.c  make-cards-svg  meson.build  mille.c  mille.h  misc.c  move.c  print.c  roll.c  save.c  table.c  types.c  ui.c  ui.h  uiXt.c  uiXt.h  varpush.c  xmille.desktop.in
xmille/CVS/: Baserev  Entries  Repository
xmille/CVS/Base/: save.c
xmille/RCS.tmp/: Imakefile,v
xmille/RCS.tmp/CVS/: Entries  Repository
xmille/cards/: Makefile  make-card.5c  meson.build
xmille/cards/CVS/: Entries  Repository
xreversi/: .gitignore  Reversi.ad.in  Reversi.c  Reversi.h  ReversiP.h  display.c  game.c  genedge.c  hasmove.c  make-xreversi-svg  makeedge.y  meson.build  minmax.c  move.c  transform.h  ulex.l  user.y  xreversi-icon.5c  xreversi.6  xreversi.c  xreversi.desktop.in
